[package]
name = "mdbook-handlebars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
handlebars = "4.4.0"
mdbook = { version = "0.4.34", default-features = false }
mdbook-preprocessor-boilerplate = "0.1.2"
serde = "1.0.188"
serde-frontmatter = "0.1.0"
serde_derive = "1.0.188"
serde_json = "1.0.107"
